test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/skip-generate/cpol-with-exceptions/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: policy-exception
spec:
  exceptions:
  - policyName: disallow-host-path-t11
    ruleNames:
    - host-path
  match:
    any:
    - resources:
        kinds:
        - Deployment
        names:
        - important-tool*
