test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/skip-generate/cpol-with-exceptions/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: cpol-with-exceptions
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: policy.yaml
    - assert:
        file: policy-assert.yaml
  - name: step-02
    try:
    - apply:
        file: exception.yaml
  - name: step-03
    try:
    - sleep:
        duration: 15s
  - name: step-04
    try:
    - error:
        file: validatingadmissionpolicy.yaml
    - error:
        file: validatingadmissionpolicybinding.yaml
